--- a/requirements.txt
+++ b/requirements.txt
@@ -1,128 +1,22 @@
-appdirs==1.4.4
 asgiref==3.4.1
-beautifulsoup4==4.9.3
-blinker==1.4
-bottle==0.12.19
-bottle-mysql==0.3.1
-Brlapi==0.8.2
-cachetools==4.2.4
-certifi==2020.6.20
-chardet==4.0.0
-chrome-gnome-shell==0.0.0
-click==7.1.2
-colorama==0.4.4
-command-not-found==0.3
-configparser==5.0.2
-cryptography==3.3.2
-cupshelpers==1.0
-cycler==0.10.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.1
-distro==1.5.0
-distro-info==1.0
+astroid==2.9.0
 Django==3.2.9
 djangorestframework==3.12.4
-filelock==3.0.12
-Flask==2.0.2
-google-api-core==2.2.1
-google-api-python-client==2.28.0
-google-auth==2.3.2
-google-auth-httplib2==0.1.0
-google-cloud-appengine-logging==0.2.0
-google-cloud-audit-log==0.2.0
-google-cloud-bigquery==2.29.0
-google-cloud-core==2.1.0
-google-cloud-datastore==2.3.0
-google-cloud-error-reporting==1.4.0
-google-cloud-logging==2.6.0
-google-cloud-storage==1.42.3
-google-crc32c==1.3.0
-google-python-cloud-debugger==2.18
-google-resumable-media==2.1.0
-googleapis-common-protos==1.53.0
-grpcio==1.41.1
-grpcio-status==1.41.1
-gunicorn==20.1.0
-gyp==0.1
-html5lib==1.1
-httplib2==0.18.1
-idna==2.10
-importlib-metadata==1.6.0
-itsdangerous==2.0.1
-jeepney==0.6.0
-Jinja2==3.0.3
+isort==5.10.1
 joblib==1.1.0
-keyring==22.2.0
-kiwisolver==1.3.2
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.5
-libcst==0.3.21
-louis==3.16.0
-lxml==4.6.3
-macaroonbakery==1.3.1
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-more-itertools==4.2.0
-mypy-extensions==0.4.3
-mysqlclient==1.4.4
-netifaces==0.10.9
-numpy==1.19.5
-oauth2client==4.1.3
-oauthlib==3.1.0
-olefile==0.46
-packaging==21.2
-pexpect==4.8.0
-Pillow==8.1.2
-proto-plus==1.19.7
-protobuf==3.19.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycups==2.0.1
-pygame==2.0.1
-PyGObject==3.38.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-PySimpleGUI==4.49.0
-python-apt===2.2.0-ubuntu0.21.04.1
-python-dateutil==2.8.1
-python-debian==0.1.39
-pytz==2021.1
-pyxdg==0.27
-PyYAML==5.3.1
-reportlab==3.5.66
-requests==2.25.1
-rsa==4.7.2
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+numpy==1.21.4
+platformdirs==2.4.0
+pylint==2.12.1
+pytz==2021.3
 scikit-learn==1.0.1
 scipy==1.7.3
-scour==0.38.2
-SecretStorage==3.3.1
-simplejson==3.17.2
-six==1.15.0
 sklearn==0.0
-soupsieve==2.2
 sqlparse==0.4.2
-systemd-python==234
 threadpoolctl==3.0.0
-typing-extensions==3.10.0.2
-typing-inspect==0.7.1
-ubuntu-advantage-tools==27.4
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-uritemplate==4.1.1
-urllib3==1.26.2
-virtualenv==20.4.0+ds
-wadllib==1.3.5
-webencodings==0.5.1
-Werkzeug==2.0.2
+toml==0.10.2
+typing_extensions==4.0.0
+wrapt==1.13.3
+gunicorn==20.1.0
 whitenoise==5.3.0
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
